--- a/folha.css
+++ b/folha.css
@@ -1,3 +1,8 @@
+/* area principal padding r and l : 3% = total 6%    */
+/* postagens recentes left: 3% = total 9%            */
+/* postagens recentes width: 20% = total 29%         */
+/* area postagens width: 70% = total 99%             */
+
 * {
     margin: 0;
     padding: 0;
@@ -5,6 +10,7 @@
 
 h2{
     font-size: 1em;
+    background-color: white;
 }
 
 hr{
@@ -19,7 +25,8 @@ body {
 
 #cabecalho {
     background: #f7b600;
-    padding: 20px;
+    padding: 20px 0px;
+    width: 100%;
 }
 
 #titulo {
@@ -48,20 +55,21 @@ a {
 
 #areaPrincipal {
     border-radius: 7px;
-    margin: 10px auto;
-    padding: 10px;
+    padding-top: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
+ 
 
-    width: 930px;
 }
 
 .imagem {
-    max-width: 500px;
+    width: 90%;
 }
 
 .areaPostagens {
 
-    width: 660px;
     float: left;
+    width: 70%;
 
 }
 
@@ -71,6 +79,7 @@ a {
     padding: 10px;
     border-radius: 7px;
     margin-bottom: 10px;
+    max-width: 100%;
 }
 
 .dataPost {
@@ -105,14 +114,17 @@ a.branco:hover{
 #postagensRecentes {
     background: white;
     border-radius: 7px;
-    width: 240px;
+    width: 20%;
     padding: 5px;
-    float: right;
+    display: inline-block;
+    margin-left: 3%;
+    position: fixed;
+    
+  
 }
 
 .titPostagensRecentes{
     text-align: center;
-    background: #CDC9C9;
     padding: 5px;
 }
 
@@ -129,6 +141,15 @@ a.branco:hover{
     font-size: 1em;
 }
 
+.textoPost{
+    text-align: start;
+    width: 90%;
+}
+
+#leiaMais{
+    font-size: 1em;
+}
+
 /* ---------------- */
 
 #rodape {
@@ -136,4 +157,27 @@ a.branco:hover{
     text-align: center;
     padding: 15px;
     background: #CCC;
+    width: 100%;
+}
+
+@media (max-width: 551px){
+    
+    body{
+        text-align: center;
+    }
+    
+    #postagensRecentes{
+
+        margin-top: 3%;
+        margin-left: 0%;
+        margin-bottom: 3%;
+        width: 70%;
+        position: static;
+    }
+
+    .areaPostagens{
+        width: 100%;
+        float: none;
+
+    }
 }
