--- a/folhaPostar.css
+++ b/folhaPostar.css
@@ -27,8 +27,6 @@ body {
     background: #f7b600;
     padding: 20px 0px;
     width: 100%;
-    text-align: center;
-    
 }
 
 #titulo {
@@ -47,32 +45,6 @@ body {
     padding-top: 7px;
 }
 
-#menuDevice{
-    text-align: center;
-    padding-top: 7px;
-    display: none;
-}
-
-#menuDevice:hover{
-    cursor: pointer;
-}
-
-#itensMenuDevice{
-    display: none;
-    list-style-type: none;
-    
-}
-
-.itemMenuDevice{
-    color: white;
-    font-weight: bold;
-    font-size: 1.5em;
-}
-
-li{
-    margin-bottom: 8px;
-}
-
 a {
     text-decoration: none;
     font-size: 1.1em;
@@ -86,6 +58,9 @@ a {
     padding-top: 2%;
     padding-left: 3%;
     padding-right: 3%;
+    width: 50%;
+    text-align: center;
+    margin: 10px auto;
  
 
 }
@@ -178,18 +153,6 @@ a.branco:hover{
     font-size: 1em;
 }
 
-#menuImg{
-    width: 50px;
-    height: 50px;
-    color: white;
-    margin: 0 auto;
-}
-
-#iconMenu{
-    display: inline-block;
-    text-align: center;
-}
-
 /* ---------------- */
 
 #rodape {
@@ -219,15 +182,4 @@ a.branco:hover{
         float: none;
 
     }
-
-    #menu{
-        display: none;
-    }
-
-    #menuDevice{
-        display: inline-block;
-        text-align: center;
-    }
-
-
 }
