--- a/folhas/folhaContato.css
+++ b/folhas/folhaContato.css
@@ -12,6 +12,10 @@
     margin-bottom: 30px;
 }
 
+a:hover{
+    text-decoration: none !important;
+}
+
 iframe{
     border: 2px solid black;
 	border-radius: 20px;
@@ -173,6 +177,7 @@ a {
 
 .branco {
     color: white;
+    font-weight: bold;
 }
 
 .laranja {
