--- a/folhas/folha.css
+++ b/folhas/folha.css
@@ -40,10 +40,20 @@ body {
 
 #cabecalho {
     background: #f7b600;
-    padding: 20px 0px;
+    padding: 1% 3%;
     width: 100%;
     text-align: center;
     
+}
+
+#terra{
+    height: 40px;
+    width: 40px;
+    
+}
+
+#lang{
+    text-align: right;
 }
 
 #titulo {
